Bug 985016 - [B2G][Camera] Z-Index of Zoom Bar is incorrect

--- a/apps/camera/style/settings.css
+++ b/apps/camera/style/settings.css
@@ -2,7 +2,7 @@
 .settings {
   position: absolute;
   left: 0; top: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   height: 100%;
   font-size: 1.6rem;
